--- a/services.html
+++ b/services.html
@@ -53,7 +53,7 @@
                 <ul class="services">
                     <li class="services__item service">
                         <div class="service__img">
-                            <img src="/img/waterfall.png" class="service__img-1" alt="waterfall">
+                            <img src="img/waterfall.png" class="service__img-1" alt="waterfall">
                         </div>
                         <div class="service__content">
                             <h2 class="service__title">Водопад Янг-Бей</h2>
@@ -68,7 +68,7 @@
                     </li>
                     <li class="services__item service">
                         <div class="service__img">
-                            <img src="/img/monkeys.png" class="service__img-2" alt="waterfall">
+                            <img src="img/monkeys.png" class="service__img-2" alt="waterfall">
                         </div>
                         <div class="service__content">
                             <h2 class="service__title">Остров обезьян</h2>
@@ -103,42 +103,42 @@
                 <ul class="partners-list">
                     <li class="partners__item">
                         <a href="" class="partners__link">
-                            <img src="/img/pobeda.png" alt="pobeda" class="">
+                            <img src="img/pobeda.png" alt="pobeda" class="">
                         </a>
                     </li>
                     <li class="partners__item">
                         <a href="" class="partners__link">
-                            <img src="/img/s7.png" alt="s7" class="">
+                            <img src="img/s7.png" alt="s7" class="">
                         </a>
                     </li>
                     <li class="partners__item">
                         <a href="" class="partners__link">
-                            <img src="/img/lets-fly.png" alt="слетать.ру" class="">
+                            <img src="img/lets-fly.png" alt="слетать.ру" class="">
                         </a>
                     </li>
                     <li class="partners__item">
                         <a href="" class="partners__link">
-                            <img src="/img/lufthansa.png" alt="lufthansa" class="">
+                            <img src="img/lufthansa.png" alt="lufthansa" class="">
                         </a>
                     </li>
                     <li class="partners__item">
                         <a href="" class="partners__link">
-                            <img src="/img/airbaltic.png" alt="airbaltic" class="">
+                            <img src="img/airbaltic.png" alt="airbaltic" class="">
                         </a>
                     </li>
                     <li class="partners__item">
                         <a href="" class="partners__link">
-                            <img src="/img/pegasus.png" alt="pegasus" class="">
+                            <img src="img/pegasus.png" alt="pegasus" class="">
                         </a>
                     </li>
                     <li class="partners__item">
                         <a href="" class="partners__link">
-                            <img src="/img/ural.png" alt="uralairlines" class="">
+                            <img src="img/ural.png" alt="uralairlines" class="">
                         </a>
                     </li>
                     <li class="partners__item">
                         <a href="" class="partners__link">
-                            <img src="/img/pegas.png" alt="pegas" class="">
+                            <img src="img/pegas.png" alt="pegas" class="">
                         </a>
                     </li>
                 </ul>
