--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="1200, intial-sacle=1.0">
-    <title>Air Asia</title>
+    <title>Air Asia | Main page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css" class="href">
@@ -14,16 +14,16 @@
     <div class="wrapper main-page-wrapper">
         <section class="hero">
             <div class="container hero__container">
-                <header class="header">
+                <header class="header header__main">
                     <div class="header__col">
                         <div class="logo">
                             <a href="/" class="logo__link"><img src="img/logo.png" alt="Logo" class="logo__img"></a>
                         </div>
                         <nav class="address">
                             <ul class="address__list">
-                                <li class="address__item"><a href="#" class="address_link">Главная</a></li>
+                                <li class="address__item"><a href="./index.html" class="address_link">Главная</a></li>
                                 <li class="address__item"><a href="./services.html" class="address_link">Услуги</a></li>
-                                <li class="address__item"><a href="#" class="address_link">Отзывы</a></li>
+                                <li class="address__item"><a href="./reviews.html" class="address_link">Отзывы</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -37,7 +37,7 @@
                 <div class="hero__content">
                     <h1 class="hero__title">Авторские туры по Aзии</h1>
                     <div class="hero__text">Открой для себя Азию</div>
-                    <a href="#" class="button  ">ПОДРОБНЕЕ</a>
+                    <a href="#" class="button">ПОДРОБНЕЕ</a>
                 </div>
             </div>
         </section>
@@ -151,7 +151,7 @@
                     </ul>
                 </div>
         </section>
-        <div class="paginator">
+        <div class="paginator paginator__main">
             <div class="paginator__display">Страница 1 из 7</div>
             <ul class="paginator__list">
                 <li class="paginator__item paginator__item--active"><a href="#" class="paginator__button">1</a>
