--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="1200, intial-sacle=1.0">
-    <title>Services</title>
+    <title>Air-Asia | Services</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css" class="href">
@@ -22,9 +22,9 @@
                         </div>
                         <nav class="address">
                             <ul class="address__list">
-                                <li class="address__item"><a href="#" class="address_link">Главная</a></li>
-                                <li class="address__item"><a href="#" class="address_link">Услуги</a></li>
-                                <li class="address__item"><a href="#" class="address_link">Отзывы</a></li>
+                                <li class="address__item"><a href="./index.html" class="address_link">Главная</a></li>
+                                <li class="address__item"><a href="./services.html" class="address_link">Услуги</a></li>
+                                <li class="address__item"><a href="./reviews.html" class="address_link">Отзывы</a></li>
                             </ul>
                         </nav>
                     </div>
