--- a/reviews.html
+++ b/reviews.html
@@ -22,9 +22,9 @@
                         </div>
                         <nav class="address">
                             <ul class="address__list">
-                                <li class="address__item"><a href="./index.html" class="address_link">Главная</a></li>
-                                <li class="address__item"><a href="/services.html" class="address_link">Услуги</a></li>
-                                <li class="address__item"><a href="./reviews.html" class="address_link">Отзывы</a></li>
+                                <li class="address__item"><a href="./index.html" class="address__link">Главная</a></li>
+                                <li class="address__item"><a href="/services.html" class="address__link">Услуги</a></li>
+                                <li class="address__item"><a href="./reviews.html" class="address__link">Отзывы</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -42,7 +42,7 @@
                             <a href="" class="breadcrumbs__link">Главная</a>
                         </li>
                         <li class="breadcrumbs__item breadcrumbs__item-active">
-                            <a href="#" class="breadcrumbs__link">Услуги</a>
+                            <a href="#" class="breadcrumbs__link">Отзывы</a>
                         </li>
                     </ul>
                 </nav>
@@ -266,9 +266,9 @@
                         </div>
                         <nav class="address">
                             <ul class="address__list">
-                                <li class="address__item"><a href="#" class="address_link">Главная</a></li>
-                                <li class="address__item"><a href="#" class="address_link">Услуги</a></li>
-                                <li class="address__item"><a href="#" class="address_link">Отзывы</a></li>
+                                <li class="address__item"><a href="#" class="address__link">Главная</a></li>
+                                <li class="address__item"><a href="#" class="address__link">Услуги</a></li>
+                                <li class="address__item"><a href="#" class="address__link">Отзывы</a></li>
                             </ul>
                         </nav>
                     </div>
