--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                         </div>
                         <nav class="address">
                             <ul class="address__list">
-                                <li class="address__item"><a href="./index.html" class="address_link">Главная</a></li>
-                                <li class="address__item"><a href="./services.html" class="address_link">Услуги</a></li>
-                                <li class="address__item"><a href="./reviews.html" class="address_link">Отзывы</a></li>
+                                <li class="address__item"><a href="./index.html" class="address__link">Главная</a></li>
+                                <li class="address__item"><a href="./services.html" class="address__link">Услуги</a></li>
+                                <li class="address__item"><a href="./reviews.html" class="address__link">Отзывы</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -191,9 +191,9 @@
                         </div>
                         <nav class="address">
                             <ul class="address__list">
-                                <li class="address__item"><a href="#" class="address_link">Главная</a></li>
-                                <li class="address__item"><a href="#" class="address_link">Услуги</a></li>
-                                <li class="address__item"><a href="#" class="address_link">Отзывы</a></li>
+                                <li class="address__item"><a href="#" class="address__link">Главная</a></li>
+                                <li class="address__item"><a href="#" class="address__link">Услуги</a></li>
+                                <li class="address__item"><a href="#" class="address__link">Отзывы</a></li>
                             </ul>
                         </nav>
                     </div>
