--- a/index.html
+++ b/index.html
@@ -1,227 +1,26 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="1200, intial-sacle=1.0">
-    <title>Air Asia | Main page</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Air Asia | Welcome page</title>
+    <link href="normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css" class="href">
 </head>
 
 <body>
-    <div class="wrapper main-page-wrapper">
-        <section class="hero">
-            <div class="container hero__container">
-                <header class="header header__main">
-                    <div class="header__col">
-                        <div class="logo">
-                            <a href="/" class="logo__link"><img src="img/logo.png" alt="Logo" class="logo__img"></a>
-                        </div>
-                        <nav class="address">
-                            <ul class="address__list">
-                                <li class="address__item"><a href="./index.html" class="address__link">Главная</a></li>
-                                <li class="address__item"><a href="./services.html" class="address__link">Услуги</a></li>
-                                <li class="address__item"><a href="./reviews.html" class="address__link">Отзывы</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="header__col header__col-align-right">
-                        <address class="contact">
-                            <a href="tel:+78007003030" class="contact__phone">8 800 700 30 30</a>
-                            <div class="contact__workhours">График работы</div>
-                        </address>
-                    </div>
-                </header>
-                <div class="hero__content">
-                    <h1 class="hero__title">Авторские туры по Aзии</h1>
-                    <div class="hero__text">Открой для себя Азию</div>
-                    <a href="#" class="button">ПОДРОБНЕЕ</a>
-                </div>
+    <div class="welcome">
+        <div class="welcome__container">
+            <div class="center center__asia">
+                <img src="./img/logowel.png" alt="air asia logo" class="center__logo">
+                <h2 class="center__title">Открой для себя Азию</h2>
+                <a href="./mainpage.html" class="button button__welcome">Войти</a>
             </div>
-        </section>
-        <section class="tours">
-            <div class="container">
-                <div class="tours__header">
-                    <h2 class="tours__title title">Горящие туры</h2>
-                    <img src="img/flame.png" alt="flame" class="tours__icons">
-                    <ul class="tours__list">
-                        <li class="tours__item">
-                            <div class="tours__img">
-                                <img src="img/river.png" alt="thailand" class="tours__pic">
-                            </div>
-                            <div class="tours__content">
-                                <h4 class="tours__subtitle">Тайланд</h4>
-                                <ul class="tours__catalog">
-                                    <li class="tours__option">
-                                        <img src="img/calendar.png" alt="calendar" class="tours__option-img1">
-                                        <div class="tours__indent">7-12 ночей</div>
-                                    </li>
-                                    <li class="tours__option">
-                                        <img src="img/meal.png" alt="meal" class="tours__option-img2">
-                                        <div class="tours__indent">Завтраки</div>
-                                    </li>
-                                </ul>
-                                <p class="tours__discription">Равным образом постоянное обеспечение нашей
-                                    деятельности
-                                    позволяет оценить значение систем массового участия.
-                                </p>
-                                <a href="#" class="button button_style_transparent">СМОТРЕТЬ</a>
-                            </div>
-                        </li>
-                        <li class="tours__item">
-                            <div class="tours__img">
-                                <img src="img/pool.png" alt="bali" class="tours__pic">
-                                <div class="tours__content">
-                                    <h4 class="tours__subtitle">Бали</h4>
-                                    <ul class="tours__catalog">
-                                        <li class="tours__option">
-                                            <img src="img/calendar.png" alt="calendar" class="tours__option-img1">
-                                            <div class="tours__indent">7-12 ночей</div>
-                                        </li>
-                                        <li class="tours__option">
-                                            <img src="img/meal.png" alt="meal" class="tours__option-img2">
-                                            <div class="tours__indent">Завтраки</div>
-                                        </li>
-                                    </ul>
-                                    <p class="tours__discription">Равным образом постоянное обеспечение нашей
-                                        деятельности позволяет оценить значение систем массового участия.
-                                    </p>
-                                    <div class="btn-position">
-                                        <a href="#" class="button button_style_transparent">СМОТРЕТЬ</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="tours__item">
-                            <div class="tours__img">
-                                <img src="img/ocean.png" alt="indonesia" class="tours__pic">
-                            </div>
-                            <div class="tours__content">
-                                <h4 class="tours__subtitle">Индонезия</h4>
-                                <ul class="tours__catalog">
-                                    <li class="tours__option">
-                                        <img src="img/calendar.png" alt="calendar" class="tours__option-img1">
-                                        <div class="tours__indent">7-12 ночей</div>
-                                    </li>
-                                    <li class="tours__option">
-                                        <img src="img/meal.png" alt="meal" class="tours__option-img2">
-                                        <div class="tours__indent">Завтраки</div>
-                                    </li>
-                                </ul>
-                                <p class="tours__discription">Равным образом постоянное обеспечение нашей
-                                    деятельности
-                                    позволяет оценить значение систем массового участия.
-                                </p>
-                                <div class="btn-position">
-                                    <a href="#" class="button button_style_transparent ">СМОТРЕТЬ</a>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-
-        <section class="promotions">
-            <div class="container">
-                <h3 class="promotions__topic title">Новости и акции</h3>
-                <div class="promotions__discription">
-                    <ul class="promotions__news">
-                        <li class="promotions__catalog single-catalog">
-                            <img src="img/plain.png" alt="" class="promotions__pic">
-                            <div class="single-catalog__text">
-                                <time class="single-catalog__date">Декабрь 2019</time>
-                                <h3 class="single-catalog__title">Дешевые путевки на Новый год!</h3>
-                                <div class="single-catalog__сomment">Проведи Новый год в Тайланде</div>
-                            </div>
-                        </li>
-                        <li class="promotions__catalog single-catalog">
-                            <img src="img/Surfer.png" alt="" class="promotions__pic">
-                            <div class="single-catalog__text">
-                                <time class="single-catalog__date">Декабрь 2019</time>
-                                <h3 class="single-catalog__title">Акция для серфенгистов!</h3>
-                                <div class="single-catalog__сomment">В сезон больших волн скидка на путевку в Тайланд на
-                                    островe серфенгистов. Удачного пути!</div>
-                            </div>
-                        </li>
-
-
-                    </ul>
-                </div>
-        </section>
-        <div class="paginator paginator__main">
-            <div class="paginator__display">Страница 1 из 7</div>
-            <ul class="paginator__list">
-                <li class="paginator__item paginator__item--active"><a href="#" class="paginator__button">1</a>
-                </li>
-                <li class="paginator__item"><a href="#" class="paginator__button">2</a></li>
-                <li class="paginator__item"><a href="#" class="paginator__button">3</a></li>
-                <li class="paginator__item"><a href="#" class="paginator__button">4</a></li>
-                <li class="paginator__item"><a href="#" class="paginator__button">5</a></li>
-                <li class="paginator__item"><a href="#" class="paginator__button">6</a></li>
-                <li class="paginator__item"><a href="#" class="paginator__button">7</a></li>
-            </ul>
         </div>
-        <section class="about">
-            <div class="container">
-                <div class="about__list">
-                    <img src="img/gates.png" alt="" class="about__pic-1">
-                    <div class="about__fragment">
-                        <img src="img/mountains.png" alt="" class="about__pic-2">
-                        <div class="about__description">
-                            <h3 class="about__title title">О нас</h3>
-                            <p class="about__text"> Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру
-                                сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском
-                                языке, а
-                                начинающему оратору отточить навык публичных выступлений в домашних условиях. </p>
-                            <a href="#" class="button">ПОДРОБНЕЕ</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <footer class="footer-container">
-            <div class="container footer-container__content">
-                <div class="footer footer-container__section">
-                    <div class="footer__col">
-                        <div class="logo">
-                            <a href="/" class="logo__link"><img src="img/logo.png" alt="" class="logo__img"></a>
-                        </div>
-                        <nav class="address">
-                            <ul class="address__list">
-                                <li class="address__item"><a href="#" class="address__link">Главная</a></li>
-                                <li class="address__item"><a href="#" class="address__link">Услуги</a></li>
-                                <li class="address__item"><a href="#" class="address__link">Отзывы</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="footer__col footer__col-align-right">
-                        <ul class="social">
-                            <li class="social__icon social__icon-tg">
-                                <a href="#" class="social__link"></a>
-                            </li>
-                            <li class="social__icon social__icon-vk">
-                                <a href="#" class="social__link"></a>
-                            </li>
-                            <li class="social__icon social__icon-fb">
-                                <a href="#" class="social__link"></a>
-                            </li>
-                            <li class="social__icon social__icon-ig">
-                                <a href="#" class="social__link"></a>
-                            </li>
-                        </ul>
-                        <address class="contact">
-                            <div class="contact__workhours">Бесплатный звонк по России</div>
-                            <a href="tel:+78007003030" class="contact__phone">8 800 700 30 30</a>
-                        </address>
-                    </div>
-                </div>
-            </div>
     </div>
-    </footer>
-
 </body>
 
 </html>
