--- a/reviews.html
+++ b/reviews.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="1200, intial-sacle=1.0">
     <title>Air-Asia | Reviews</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link href="normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css" class="href">
     <link rel="stylesheet" href="services.css" class="href">
 </head>
 
 <body>
-    <div class="wrapper ">
+    <div class="wrapper warapper__reviews">
         <section class="top-line">
             <div class="container top-line__container">
                 <header class="header">
@@ -22,9 +22,9 @@
                         </div>
                         <nav class="address">
                             <ul class="address__list">
-                                <li class="address__item"><a href="./index.html" class="address__link">Главная</a></li>
-                                <li class="address__item"><a href="/services.html" class="address__link">Услуги</a></li>
-                                <li class="address__item"><a href="./reviews.html" class="address__link">Отзывы</a></li>
+                                <li class="address__item"><a href="./mainpage.html" class="address__link">Главная</a></li>
+                                <li class="address__item"><a href="./services.html" class="address__link ">Услуги</a></li>
+                                <li class="address__item"><a href="./reviews.html" class="address__link address__link--active">Отзывы</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -55,13 +55,13 @@
                         <div class="review__header">
                             <div class="review__photo">
                                 <div class="avatar">
-                                    <img src="img/ivan.png" alt="user">
+                                    <img src="img/ivancube.jpg" alt="user">
                                 </div>
                             </div>
                             <div class="review__userdata">
                                 <a href="#" class="review__user"> Иван Петрович</a>
-                                <ul class="review__tags">
-                                    <li class="review__tag-item tag">Водопад Янг-Бей</li>
+                                <ul class="review__tags ">
+                                    <li class="review__tag-item tag tag--bg--green">Водопад Янг-Бей</li>
                                 </ul>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                         <div class="review__header">
                             <div class="review__photo">
                                 <div class="avatar">
-                                    <img src="img/liza.png" alt="user">
+                                    <img src="img/lizacube.jpg" alt="user">
                                 </div>
                             </div>
                             <div class="reviw__userdata">
@@ -110,13 +110,13 @@
                         <div class="review__header">
                             <div class="review__photo">
                                 <div class="avatar">
-                                    <img src="img/kate.png" alt="user">
+                                    <img src="img/katecube.jpg" alt="user">
                                 </div>
                             </div>
                             <div class="reviw__userdata">
                                 <a href="#" class="review__user">Екатерина Жмых</a>
-                                <ul class="review__tags">
-                                    <li class="review__tag-item tag">Тур на остров обезьян</li>
+                                <ul class="review__tags ">
+                                    <li class="review__tag-item tag tag tag--bg--green">Тур на остров обезьян</li>
                                 </ul>
                             </div>
                         </div>
@@ -143,13 +143,13 @@
                         <div class="review__header">
                             <div class="review__photo">
                                 <div class="avatar">
-                                    <img src="img/anton.png" alt="user">
+                                    <img src="img/antoncube.jpg" alt="user">
                                 </div>
                             </div>
                             <div class="review__userdata">
                                 <a href="#" class="review__user">Антон Игоревич</a>
                                 <ul class="review__tags">
-                                    <li class="review__tag-item tag">Тур по Индонезии</li>
+                                    <li class="review__tag-item tag tag--bg--green">Тур по Индонезии</li>
                                 </ul>
                             </div>
                         </div>
@@ -206,43 +206,43 @@
                         <div class="form__controls-title">Какими услугами компании пользуетесь?</div>
                         <ul class="controls">
                             <li class="controls__item">
-                                <labe class="controls__elem">
+                                <label class="controls__elem">
                                     <input type="checkbox" class="controls__checkbox">
                                     <div class="tag controls__tag">Остров обезьян</div>
                                 </label>
                             </li>
                             <li class="controls__item">
-                                <labe class="controls__elem">
+                                <label class="controls__elem">
                                     <input type="checkbox" class="controls__checkbox">
                                     <div class="tag controls__tag">Тур по Тайланду</div>
                                 </label>
                             </li>
                             <li class="controls__item">
-                                <labe class="controls__elem">
+                                <label class="controls__elem">
                                     <input type="checkbox" class="controls__checkbox">
                                     <div class="tag controls__tag">Водопад Янг-Бей</div>
                                 </label>
                             </li>
                             <li class="controls__item">
-                                <labe class="controls__elem">
+                                <label class="controls__elem">
                                     <input type="checkbox" class="controls__checkbox">
                                     <div class="tag controls__tag">Тур по Индонезии</div>
                                 </label>
                             </li>
                             <li class="controls__item">
-                                <labe class="controls__elem">
+                                <label class="controls__elem">
                                     <input type="checkbox" class="controls__checkbox">
                                     <div class="tag controls__tag">Никакими</div>
                                 </label>
                             </li>
                             <li class="controls__item">
-                                <labe class="controls__elem">
+                                <label class="controls__elem">
                                     <input type="checkbox" class="controls__checkbox">
                                     <div class="tag controls__tag">Тур по Бали</div>
                                 </label>
                             </li>
                             <li class="controls__item">
-                                <labe class="controls__elem">
+                                <label class="controls__elem">
                                     <input type="checkbox" class="controls__checkbox">
                                     <div class="tag controls__tag">Другое</div>
                                 </label>
@@ -266,9 +266,9 @@
                         </div>
                         <nav class="address">
                             <ul class="address__list">
-                                <li class="address__item"><a href="#" class="address__link">Главная</a></li>
-                                <li class="address__item"><a href="#" class="address__link">Услуги</a></li>
-                                <li class="address__item"><a href="#" class="address__link">Отзывы</a></li>
+                                <li class="address__item"><a href="./mainpage.html" class="address__link">Главная</a></li>
+                                <li class="address__item"><a href="./services.html" class="address__link ">Услуги</a></li>
+                                <li class="address__item"><a href="./reviews.html" class="address__link address__link--active">Отзывы</a></li>
                             </ul>
                         </nav>
                     </div>
